--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST = node31160-apitest3.app.ruk-com.cloud
+DB_HOST = node31258-rattana.app.ruk-com.cloud
 DB_USER = root
-DB_PASSWORD = 1DjIBIYbjs
+DB_PASSWORD = TYHmby97754
 DB_DATABASE = shop
-DB_PORT = 11174
+DB_PORT = 11336
 
 port = 3003
