--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST = node31258-rattana.app.ruk-com.cloud
+DB_HOST = node31258-rattana.app.ruk-com.cloud/
 DB_USER = root
-DB_PASSWORD = xmhsFtzjWG
+DB_PASSWORD = MVCtwielIv
 DB_DATABASE = shop
 DB_PORT = 11243
 
-port = 3003
+port = 3001
