--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST = node31258-rattana.app.ruk-com.cloud/
+DB_HOST = node31258-rattana.app.ruk-com.cloud
 DB_USER = root
 DB_PASSWORD = MVCtwielIv
 DB_DATABASE = shop
